--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Easy Timer</title>
+	<title>Online Stopwatch Timer</title>
+	<link href="css/ionicons.min.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	Hello!
+	<i id="brightness" class="ion-ios-sunny-outline"></i>
+	<section class="container">
+		<div class="clock">
+			<span class="hour">0</span>:<span class="minute">00</span><span class="second">00</span><span class="ampm">AM</span>
+		</div>	
+	</section>
+
+	<script src="js/jquery.min.js"></script>
 	<script src="js/javascript.js"></script>
 </body>
 </html>
