--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<i id="brightness" class="ion-ios-sunny-outline"></i>
+	<i id="menubtn" class="btn ion-navicon"></i>
+	<i id="brightness" class="btn ion-ios-sunny-outline"></i>
 	<section class="container">
 		<div class="clock">
 			<span class="hour">0</span>:<span class="minute">00</span><span class="second">00</span><span class="ampm">AM</span>
