--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<i id="menubtn" class="btn ion-navicon"></i>
 	<i id="brightness" class="btn ion-ios-sunny-outline"></i>
+	<i id="togglemenu" class="btn ion-navicon"></i>
+	<aside id="menu">
+		<ul>
+			<li class="btn timer"><i class="ion-ios-timer-outline"></i> Timer</li>
+			<li class="btn clock selected"><i class="ion-ios-clock-outline"></i> Clock</li>
+			<li class="btn "><i class="ion-mic-a"></i> Thing</li>
+		</ul>
+	</aside>
 	<section class="container">
-		<div class="clock">
+		<div id="clock" class="mode">
 			<span class="hour">0</span>:<span class="minute">00</span><span class="second">00</span><span class="ampm">AM</span>
+		</div>	
+		<div id="timer" class="mode">
+			<span class="hour">0</span>:<span class="minute">00</span>:<span class="second">00</span>:<span class="mili">00</span>
 		</div>	
 	</section>
 
