added size toggle

--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 		<ul>
 			<li class="btn timer"><i class="ion-ios-timer-outline"></i> Timer</li>
 			<li class="btn clock selected"><i class="ion-ios-clock-outline"></i> Clock</li>
-			<li class="btn "><i class="ion-mic-a"></i> Thing</li>
+			<button class="size">
+				<span class="big">A</span>
+				<span class="medium selected">A</span>
+				<span class="small">A</span>
+			</button>
 		</ul>
 	</aside>
-	<section class="container">
+	<section class="container medium">
 		<div id="clock" class="mode">
-			<span class="hour">0</span>:<span class="minute">00</span><span class="second">00</span><span class="ampm">AM</span>
+			<span class="hour">0</span><span>:</span><span class="minute">00</span><span class="second">00</span><span class="ampm">AM</span>
 		</div>	
 		<div id="timer" class="mode">
-			<span class="hour">0</span>:<span class="minute">00</span>:<span class="second">00</span>:<span class="mili">00</span>
+			<span class="hour">0</span><span>:</span><span class="minute">00</span><span>:</span><span class="second">00</span><span>:</span><span class="mili">00</span>
 		</div>	
 	</section>
 
