--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
 	</aside>
 	<section class="container medium">
 		<div id="clock" class="mode">
-			<span class="hour">0</span><span>:</span><span class="minute">00</span><span class="second">00</span><span class="ampm">AM</span>
+			<div class="container">
+				<span class="hour">0</span><span>:</span><span class="minute">00</span><span class="second">00</span><span class="ampm">AM</span>
+			</div>
 		</div>	
 		<div id="timer" class="mode">
-			<span class="hour">0</span><span>:</span><span class="minute">00</span><span>:</span><span class="second">00</span><span>:</span><span class="mili">00</span>
+			<div class="container">
+				<span class="hour">0</span><span>:</span><span class="minute">00</span><span>:</span><span class="second">00</span><span>:</span><span class="mili">00</span>
+			</div>
+			<span class="reset ion-ios-refresh"></span>
 		</div>	
 	</section>
 
