finished timer functionality

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 			<div class="container">
 				<span class="hour">0</span><span>:</span><span class="minute">00</span><span>:</span><span class="second">00</span><span>:</span><span class="mili">00</span>
 			</div>
-			<span class="reset ion-ios-refresh"></span>
+			<div class="edit">
+				<input class="hour" value="0" maxlength="1"><span>:</span><input class="minute" value="00" maxlength="2"><span>:</span><input class="second" value="00" maxlength="2"><span>:</span><input class="mili" value="00" maxlength="2">
+			</div>
+			<span class="btn confirm ion-ios-checkmark-empty"></span>
+			<span class="btn reset ion-ios-refresh-empty"></span>
 		</div>	
 	</section>
 
