--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 	<i id="togglemenu" class="btn ion-navicon"></i>
 	<aside id="menu">
 		<ul>
-			<li class="btn timer"><i class="ion-ios-timer-outline"></i> Timer</li>
-			<li class="btn clock selected"><i class="ion-ios-clock-outline"></i> Clock</li>
+			<li class="btn timer"><i class="keybtn">T</i> Timer</li>
+			<li class="btn clock selected"><i class="keybtn">C</i> Clock</li>
 			<button class="size">
 				<span class="big">A</span>
 				<span class="medium selected">A</span>
 				<span class="small">A</span>
+				<i class="keybtn">A</i>
 			</button>
 		</ul>
 	</aside>
@@ -26,6 +27,11 @@
 			<div class="container">
 				<span class="hour">0</span><span>:</span><span class="minute">00</span><span class="second">00</span><span class="ampm">AM</span>
 			</div>
+			<div class="edit">
+				<input class="hour" value="00" maxlength="1"><span>:</span><input class="minute" value="00" maxlength="2"><span>:</span><input class="second" value="00" maxlength="2"><span><span class="ampm">AM</span>
+			</div>
+			<span class="btn confirm ion-ios-checkmark-empty"></span>
+			<audio id="ping" src="audio/chime.mp3" preload="auto"></audio>
 		</div>	
 		<div id="timer" class="mode">
 			<div class="container">
