added save feature and favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="A simple feature rich online timer/stopwatch designed to help you make presentations, or set world records, or whatever shenanigans you're up to." />
 	<link href="css/ionicons.min.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link id="favicon" rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 	<div id="preload"></div>
